--- a/scss/style/_content.scss
+++ b/scss/style/_content.scss
@@ -62,38 +62,39 @@
 	filter: url(blur.svg#blur);
 }
 
+
+.placeholder {
+	display: block;
+	overflow: hidden;
+	width: 100%;
+	height: 100%;
+	position: relative;
+	background-size: cover;		
+	background-position: 50%;
+	//transform: translateZ(0);
+	
+	@media #{$medium-up} {
+		position: absolute;
+	/*
+		filter: blur(5px);
+		-webkit-filter: blur(5px); 
+		-moz-filter: blur(5px); 
+		-o-filter: blur(5px); 
+		-ms-filter: blur(5px); 
+		filter: url(blur.svg#blur);
+	*/
+		opacity: 0.25;
+		//transform: scale(1.1);
+	}
+	
+}
+
 .archive,
 .single {
 	.main-section {		
 		@media #{$small-only} {
 			padding: 0;
 		}
-	}
-	
-	.placeholder {
-		display: block;
-		overflow: hidden;
-		width: 100%;
-		height: 100%;
-		position: relative;
-		background-size: cover;		
-		background-position: 50%;
-		//transform: translateZ(0);
-		
-		@media #{$medium-up} {
-			position: absolute;
-		/*
-			filter: blur(5px);
-			-webkit-filter: blur(5px); 
-			-moz-filter: blur(5px); 
-			-o-filter: blur(5px); 
-			-ms-filter: blur(5px); 
-			filter: url(blur.svg#blur);
-		*/
-			opacity: 0.25;
-			//transform: scale(1.1);
-		}
-		
 	}
 }
 
@@ -303,7 +304,15 @@
 }
 
 
-
+.frontpage {
+	.placeholder-container {
+		height: 50vh;
+		
+		.featuredImage {
+			background-size: cover;
+		}
+	}
+}
 
 .placeholder-container {
 	height: 100%;
