--- a/scss/style/_content.scss
+++ b/scss/style/_content.scss
@@ -142,11 +142,21 @@
 		}
 		
 		img {
+		/*
 			display: block;
 			height: 100%;
 			width: auto;
 			max-width: none;
 			position: relative;
+		*/
+			display: block;
+			width: auto;
+			max-height: 100%;
+			max-width: 100%;
+			position: relative;
+			top: 50%;
+			left: 50%;
+			transform: translate3d(-50%, -50%, 0px);			
 		}
 		
 		.entry-header {			
